--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .hero{
 	height: 150vh;
 	width: 100%;
-	background-image: url(../img/IMG_4855.jpg);
+	background-image: url(IMG_4855.jpg);
 	background-size: cover;
 	background-position: center;
 }
